# spot-sdk

choreography_protos/: setup.py
protos/: MANIFEST.in  package.xml  setup.py
python/bosdyn-choreography-client/: package.xml  setup.py
python/bosdyn-client/: package.xml  setup.py
python/bosdyn-core/: package.xml  setup.py
python/bosdyn-mission/: package.xml  setup.py
python/bosdyn-orbit/: package.xml  setup.py
python/bosdyn-scout/: package.xml  setup.py
python/examples/fiducial_follow/: fiducial_follow.py
python/examples/spot_tensorflow_detector/: requirements.txt
python/examples/stance/: stance_in_place.py
python/examples/steamdeck_ocu/: estop_steamdeck.py  steamdeck_ocu.py
python/examples/steamdeck_ocu/spot_tensorflow_detector/: spot_tensorflow_detector.py
python/examples/steamdeck_ocu/stitch_front_images/: requirements.txt  stitch_front_images.py
python/examples/steamdeck_ocu/xbox_controller/: steamdeck_joystick.py  steamdeck_test.py  xbox_controller.py  xbox_joystick_factory.py  xbox_joystick_linux.py  xbox_joystick_steamdeck.py
python/examples/xbox_controller/: steamdeck_test.py  xbox_controller.py  xbox_joystick_factory.py  xbox_joystick_steamdeck.py
