<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bosdyn_api</name>
  <version>4.1.0</version>
  <description>Boston Dynamics Spot Python SDK APIs</description>
  <maintainer email="opensource@theaiinstitute.com">Boston Dynamics AI Institute</maintainer>
  <license>BDSDK-L</license>

  <buildtool_depend>python3-grpc-tools</buildtool_depend>
  <buildtool_depend>python3-setuptools</buildtool_depend>

  <depend>python3-grpcio</depend>
  <depend>python3-protobuf</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
