<?xml version="1.0" encoding="utf-8"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bosdyn_scout</name>
  <version>4.1.0</version>
  <description>Boston Dynamics API Scout Client</description>
  <maintainer email="opensource@theaiinstitute.com">Boston Dynamics AI Institute</maintainer>
  <license>BDSDK-L</license>

  <exec_depend>bosdyn_orbit</exec_depend>

  <exec_depend>python3-deprecated</exec_depend>
  <exec_depend>python3-requests</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
